--- a/portifolio-web.html
+++ b/portifolio-web.html
@@ -5,6 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio Web</title>
+    <style>
+      body {
+        background-color: #e2e4f6;
+      }
+      h1 {
+        color: #825e6b;
+      }
+      h3 {
+        color: #397f7a;
+      }
+      li {
+        color: #193836;
+      }
+      #cor-lista4 {
+        color: #204644;
+      }
+      #cor-lista3 {
+        color: #275452;
+      }
+      #cor-lista2 {
+        color: #2d625f;
+      }
+      #cor-lista1 {
+        color: #33706d;
+      }
+    </style>
   </head>
   <body>
     <h1>Elisa Borba Ferreira</h1>
@@ -15,7 +41,7 @@
     <img
       src="/fotoportifolio.png"
       alt="Foto de apresentação minha"
-      width="450px"
+      width="400px"
     />
     <br />
     <br />
@@ -42,15 +68,17 @@
     <!-- Lista de habilidade que mais me orgulho -->
     <h3>Habilidades que mais me orgulho:</h3>
     <ul>
-      <li>Proativa</li>
-      <li>Responsável</li>
-      <li>Empática</li>
-      <li>Resiliente</li>
+      <li id="cor-lista1">Proativa</li>
+      <li id="cor-lista2">Responsável</li>
+      <li id="cor-lista3">Empática</li>
+      <li id="cor-lista4">Resiliente</li>
       <li>Dedicada</li>
     </ul>
     <!-- link externo para  blog que goste, que abra em uma nova aba -->
     <a href="https://www.ahnegao.com.br/" target="_blank"
       >Blog que gosto para dar uma descontraída</a
     >
+    <!-- Altere o estilo das tags que você usou para destacar algumas informações -->
+    <!-- tamanho dos elementos da lista de habilidades que você criou. Lembre-se de utilizar classes em cada um dos elementos. -->
   </body>
 </html>
