--- a/portifolio-web.html
+++ b/portifolio-web.html
@@ -9,8 +9,11 @@
       body {
         background-color: #e2e4f6;
       }
-      h1 {
+      h1,
+      h3 {
         color: #825e6b;
+        font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+          "Lucida Sans", Arial, sans-serif;
       }
       h3 {
         color: #397f7a;
@@ -29,6 +32,12 @@
       }
       #cor-lista1 {
         color: #33706d;
+      }
+      .lista-tamanho {
+        font-size: 19px;
+      }
+      p {
+        font-size: 17px;
       }
     </style>
   </head>
@@ -68,17 +77,16 @@
     <!-- Lista de habilidade que mais me orgulho -->
     <h3>Habilidades que mais me orgulho:</h3>
     <ul>
-      <li id="cor-lista1">Proativa</li>
-      <li id="cor-lista2">Responsável</li>
-      <li id="cor-lista3">Empática</li>
-      <li id="cor-lista4">Resiliente</li>
-      <li>Dedicada</li>
+      <li class="lista-tamanho" id="cor-lista1">Proativa</li>
+      <li class="lista-tamanho" id="cor-lista2">Responsável</li>
+      <li class="lista-tamanho" id="cor-lista3">Empática</li>
+      <li class="lista-tamanho" id="cor-lista4">Resiliente</li>
+      <li class="lista-tamanho">Dedicada</li>
     </ul>
+    <br />
     <!-- link externo para  blog que goste, que abra em uma nova aba -->
     <a href="https://www.ahnegao.com.br/" target="_blank"
       >Blog que gosto para dar uma descontraída</a
     >
-    <!-- Altere o estilo das tags que você usou para destacar algumas informações -->
-    <!-- tamanho dos elementos da lista de habilidades que você criou. Lembre-se de utilizar classes em cada um dos elementos. -->
   </body>
 </html>
